# stock-trend-monitor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.toml
deploy/nginx/: nginx.conf
deploy/systemd/: stockwatch.service  stockwatch.timer
scripts/: backup.sh  migrate.py
stockwatch/: __init__.py  __main__.py  config.py  digest.py  indicators.py  orchestrator.py  scheduler.py  trend.py
stockwatch/delivery/: cli_output.py  email_sender.py  file_writer.py  x_poster.py
stockwatch/providers/: alpha_vantage_provider.py  base.py  yfinance_provider.py
stockwatch/storage/: db.py  repository.py
stockwatch/templates/: digest_markdown.j2  email_html.j2  email_text.j2  tweet.j2
stockwatch/utils/: healthcheck.py  logging.py  retry.py
tests/: conftest.py
tests/fixtures/: sample_ohlcv.csv
tests/integration/: test_email.py  test_pipeline.py  test_x_poster.py
tests/unit/: test_digest.py  test_indicators.py  test_trend.py
