[project]
name = "stockwatch"
version = "0.1.0"
description = "Daily stock trend monitor with email and X digest"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlite-utils>=3.37",
    "boto3>=1.34.0",
    "tweepy>=4.14.0",
    "jinja2>=3.1.4",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.4",
    "pandas-market-calendars>=4.4.1",
    "tomli>=2.0.1",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "moto[ses]>=5.0.0",
    "freezegun>=1.5.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stockwatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["stockwatch"]
omit = ["tests/*"]
